<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/licensePlateNumber"
            android:textSize="20sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/brand"
            android:textSize="20sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/owner"
            android:textSize="20sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/schedule"
            android:textSize="20sp"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp" />

        <View
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/black" />

    </LinearLayout>
</androidx.cardview.widget.CardView>